# chatter-bot

./: README.md  pyproject.toml  reload.sh
chatter/: app.py  cli.py  config.json  dingtalk.py  gpt.py  gpt3.py  handler.py
chatter/config/: __init__.py  defaults.yml
