[tool.poetry]
name = "zillionare-chatter"
version = "0.2.2"
description = ""
authors = ["aaron yang <aaron_yang@jieyu.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
revChatGPT = "^2.2.0"
sanic = "^22.12.0"
cfg4py = "^0.9.4"
psutil = "^5.9.4"
tqdm = "^4.64.1"
arrow = "^1.2.3"
async-timeout = "^4.0.2"
openai = "^0.26.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatter = 'chatter.cli:main'
